trying to fix reauth